# Markding-s-repo

./: .gitignore  README.md  main.py  pyproject.toml
app/: bigram_model.py  dependencies.py  embedding_model.py  main.py  schemas.py
app/routers/: classifier.py  embedding.py  generation.py  image_generation.py
app/services/: bigram.py  cifar10_generation.py  classifier.py  embedding.py  image_generation.py  rnn.py
checkpoints/: cifar10_cnn.pth  mnist_gan.pth
helper_lib/: __init__.py  checkpoints.py  data_loader.py  evaluator.py  generator.py  model.py  trainer.py  utils.py
notebooks/: practical_vae.py
scripts/: train_cifar10_classifier.py  train_cifar10_diffusion.py  train_cifar10_energy.py  train_mnist_gan.py  train_nn.py  train_vae.py
tests/: test_app.py  test_helper_lib.py
