[project]
name = "sps-genai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "en-core-web-lg @ https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.8.0/en_core_web_lg-3.8.0-py3-none-any.whl",
    "fastapi-cli[standard]>=0.0.24",
    "fastapi[standard]>=0.136.3",
    "marimo>=0.10.0",
    "matplotlib>=3.8.0",
    "pillow>=10.0.0",
    "pydantic>=2.13.4",
    "python-multipart>=0.0.9",
    "pytest>=9.0.2",
    "spacy>=3.8.14",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "tqdm>=4.0.0",
    "uvicorn>=0.49.0",
]

[tool.fastapi]
entrypoint = "app.main:app"

[tool.pytest.ini_options]
pythonpath = ["."]
